# vinavidai

./: .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend.yml  codeql.yml  frontend.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py
backend/apps/analytics/: admin.py  models.py
backend/apps/analytics/migrations/: 0001_initial.py
backend/apps/inventory/: admin.py  models.py  signals.py
backend/apps/inventory/migrations/: 0001_initial.py
backend/apps/notifications/: admin.py  models.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/shops/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/shops/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py
frontend/: package-lock.json  package.json
